feat(entity-dynamic-mapping): update entity relation
Signed-off-by: foukou19 <ferial.oukoukas@decathlon.com>